wallet/src/snapshots/vercre_wallet__app__tests__decrement_counter_optimistic.snap
---
source: wallet/src/app.rs
assertion_line: 317
expression: model
snapshot_kind: text
---
active_view: Credential
credential:
  id: ~
  credentials: []
issuance: ~
error: ~
count:
  value: -1
  updated_at: ~
