wallet/src/snapshots/vercre_wallet__app__tests__increment_counter_final.snap
---
source: wallet/src/app.rs
assertion_line: 304
expression: model
snapshot_kind: text
---
active_view: CredentialList
credential:
  id: ~
  credentials: []
issuance: ~
error: ~
count:
  value: 2
  updated_at: "2023-01-01T00:00:00Z"
