wallet/src/snapshots/vercre_wallet__app__tests__set_sse.snap
---
source: wallet/src/app.rs
assertion_line: 378
expression: model
snapshot_kind: text
---
active_view: Credential
credential:
  id: ~
  credentials: []
issuance: ~
error: ~
count:
  value: 1
  updated_at: "2023-01-01T00:00:00Z"
